Got SA Cosine, What the actual fuck was this unit conversion

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -933,72 +933,137 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Compute Relaxation Lengths for each test"
+    "# Get cosine of Slip Angle (SA) for each test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "309 174.51 0.10999999999998522\n",
-      "0.09696924457495842\n",
-      "799 196.72 0.2599999999999909\n",
-      "0.22920003263174274\n",
-      "829 219.01 0.539999999999992\n",
-      "0.47603083700439836\n",
-      "759 240.5 0.11000000000001364\n",
-      "0.0969692445749835\n",
-      "792 262.71 0.2799999999999727\n",
-      "0.24683080437263058\n",
-      "821 284.93 0.4700000000000273\n",
-      "0.4143231359112658\n",
-      "746 306.41 0.060000000000002274\n",
-      "0.05289231522271371\n",
-      "768 328.49 0.10000000000002274\n",
-      "0.08815385870453955\n",
-      "781 350.58 0.13999999999998636\n",
-      "0.12341540218631529\n",
-      "768 389.52 0.1099999999999568\n",
-      "0.09696924457493337\n",
-      "801 411.81 0.35000000000002274\n",
-      "0.30853850546583833\n",
-      "824 434.04 0.5600000000000023\n",
-      "0.4936616087453113\n",
-      "761 455.52 0.1099999999999568\n",
-      "0.09696924457493337\n",
-      "810 477.81 0.37000000000000455\n",
-      "0.3261692772067262\n",
-      "832 500.05 0.5799999999999841\n",
-      "0.5112923804861992\n",
-      "749 521.419 0.06999999999993634\n",
-      "0.06170770109310753\n",
-      "771 543.509 0.11000000000001364\n",
-      "0.0969692445749835\n",
-      "784 565.608 0.15999999999996817\n",
-      "0.14104617392720314\n",
-      "765 604.497 0.09999999999990905\n",
-      "0.08815385870443934\n",
-      "786 626.687 0.25\n",
-      "0.2203846467612988\n",
-      "807 648.876 0.40999999999996817\n",
-      "0.36143082068850196\n",
-      "754 670.496 0.10000000000002274\n",
-      "0.08815385870453955\n",
-      "787 692.675 0.25\n",
-      "0.2203846467612988\n",
-      "802 714.834 0.38999999999998636\n",
-      "0.34380004894761407\n",
-      "748 736.414 0.06999999999993634\n",
-      "0.06170770109310753\n",
-      "772 758.493 0.10000000000002274\n",
-      "0.08815385870453955\n",
-      "773 780.553 0.12999999999999545\n",
-      "0.11460001631587137\n"
+      "0.9998476205197714\n",
+      "0.9998476205197714\n",
+      "0.9998477301836021\n",
+      "0.9998471341732168\n",
+      "0.9998472211321215\n",
+      "0.999847117388826\n",
+      "0.9945256893938937\n",
+      "0.9945256438004062\n",
+      "0.9945265009262896\n",
+      "0.9998475946211622\n",
+      "0.9998474849085394\n",
+      "0.9998475748148588\n",
+      "0.999847100603514\n",
+      "0.9998471494309543\n",
+      "0.9998470563469113\n",
+      "0.9945257896988996\n",
+      "0.9945253702355052\n",
+      "0.9945259355954541\n",
+      "0.9998472897664137\n",
+      "0.9998474620467745\n",
+      "0.9998475001487641\n",
+      "0.9998470761868699\n",
+      "0.9998474224156573\n",
+      "0.9998472089288554\n",
+      "0.9945261817914933\n",
+      "0.9945260723717131\n",
+      "0.994526209146268\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "window_size = 200\n",
+    "test_cos_sa = []\n",
+    "\n",
+    "for raw_df, filtered_df in tests:\n",
+    "  # Get SA value -- mostly square, rolling average suffices\n",
+    "  average_sa = raw_df['SA'].abs().rolling(window_size, min_periods=window_size).mean()\n",
+    "  idx_end = average_sa.idxmax()\n",
+    "  idx_start = average_sa.index.get_loc(idx_end) - window_size + 1\n",
+    "  true_sa = raw_df['SA'].iloc[idx_start : idx_start + window_size].mean()\n",
+    "  # SA is in degrees. Get radians and take cosine\n",
+    "  cos_sa = math.cos(true_sa * (np.pi / 180))\n",
+    "  test_cos_sa.append(cos_sa)\n",
+    "  print(cos_sa)\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compute Relaxation Lengths for each test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "310 174.52 0.18999999999999773 0.9998476205197714\n",
+      "0.16746680914416293\n",
+      "801 196.74 0.37000000000000455 0.9998476205197714\n",
+      "0.32611957570179895\n",
+      "832 219.04 0.6599999999999966 0.9998477301836021\n",
+      "0.5817268745154197\n",
+      "759 240.5 0.18000000000000682 0.9998471341732168\n",
+      "0.15865268938565014\n",
+      "791 262.7 0.3499999999999659 0.9998472211321215\n",
+      "0.3084913673022262\n",
+      "819 284.91 0.5400000000000205 0.999847117388826\n",
+      "0.4759580601670628\n",
+      "746 306.41 0.1300000000000523 0.9945256893938937\n",
+      "0.11397266023114327\n",
+      "768 328.49 0.17000000000001592 0.9945256438004062\n",
+      "0.14904116423873787\n",
+      "781 350.58 0.22999999999996135 0.9945265009262896\n",
+      "0.20164410187324566\n",
+      "768 389.52 0.18999999999999773 0.9998475946211622\n",
+      "0.1674668048063445\n",
+      "804 411.84 0.46999999999997044 0.9998474849085394\n",
+      "0.41425994538024785\n",
+      "831 434.11 0.7300000000000182 0.9998475748148588\n",
+      "0.6434250794049007\n",
+      "760 455.51 0.18000000000000682 0.999847100603514\n",
+      "0.15865268405891225\n",
+      "807 477.78 0.4199999999999591 0.9998471494309543\n",
+      "0.3701896142155863\n",
+      "828 500.01 0.6299999999999955 0.9998470563469113\n",
+      "0.5552843696274088\n",
+      "749 521.419 0.13999999999998636 0.9945257896988996\n",
+      "0.12273980032035252\n",
+      "771 543.509 0.18000000000006366 0.9945253702355052\n",
+      "0.15780824813849706\n",
+      "784 565.608 0.25 0.9945259355954541\n",
+      "0.21917824701115435\n",
+      "766 604.507 0.18999999999994088 0.9998472897664137\n",
+      "0.16746675374546183\n",
+      "787 626.697 0.35000000000002274 0.9998474620467745\n",
+      "0.30849144163372333\n",
+      "810 648.906 0.5399999999999636 0.9998475001487641\n",
+      "0.47595824237254647\n",
+      "753 670.486 0.15999999999996817 0.9998470761868699\n",
+      "0.14102460460845878\n",
+      "786 692.665 0.31999999999993634 0.9998474224156573\n",
+      "0.2820493068854091\n",
+      "802 714.834 0.4799999999999045 0.9998472089288554\n",
+      "0.4230738699936239\n",
+      "747 736.404 0.12000000000000455 0.9945261817914933\n",
+      "0.1052055846091151\n",
+      "772 758.493 0.17000000000007276 0.9945260723717131\n",
+      "0.14904122846515225\n",
+      "773 780.553 0.21000000000003638 0.994526209146268\n",
+      "0.18410977812997711\n"
      ]
     }
    ],
@@ -1006,11 +1071,11 @@
     "\n",
     "relaxation_lengths = []\n",
     "\n",
-    "for i, time_info in enumerate(time_bound_by_test):\n",
+    "for time_info, cos_sa in zip(time_bound_by_test, test_cos_sa):\n",
     "    # V * dt\n",
-    "    print(time_info[0], time_info[1], time_info[2])\n",
+    "    print(time_info[0], time_info[1], time_info[2], cos_sa)\n",
     "    # scale dt down by 3600 : sec -> hr\n",
-    "    relax_len = (time_info[2] / 3600) * V_avg * 1000\n",
+    "    relax_len = (time_info[2] / 3600) * V_avg * 1000 * cos_sa\n",
     "    relaxation_lengths.append(relax_len)\n",
     "    print(relax_len)"
    ]
